RQLQGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from RQLQGrammar.y
-----------------------------------------------------------------------------

state 57 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseQuery -> QueList                       (0)
	QueList -> Que                                     (1)
	QueList -> Que QueList                             (2)
	Que -> SELECT SelectQue                            (3)
	Que -> WHERE GeneralWhereQue                       (4)
	Que -> UPDATE UpdateQue                            (5)
	Que -> PRINT PrintQue                              (6)
	SelectQue -> ResourceQue                           (7)
	SelectQue -> AliasQue                              (8)
	ResourceQue -> str                                 (9)
	ResourceQue -> str comma ResourceQue               (10)
	AliasQue -> str AS str                             (11)
	AliasQue -> str AS str comma AliasQue              (12)
	GeneralWhereQue -> WhereQue AS str                 (13)
	WhereQue -> NormalWhereQue                         (14)
	WhereQue -> WhereQue OR WhereQue                   (15)
	WhereQue -> WhereQue AND WhereQue                  (16)
	NormalWhereQue -> subject IS StringExp             (17)
	NormalWhereQue -> predicate IS StringExp           (18)
	NormalWhereQue -> object IS Literal                (19)
	NormalWhereQue -> object IS BETWEEN lBracket int comma int rBracket   (20)
	NormalWhereQue -> object IS NOT BETWEEN lBracket int comma int rBracket   (21)
	NormalWhereQue -> str dollar object IS Literal     (22)
	NormalWhereQue -> str dollar Triplets IS StringExp   (23)
	NormalWhereQue -> str dollar Triplets IS str dollar Triplets   (24)
	NormalWhereQue -> str dollar object IS BETWEEN lBracket int comma int rBracket   (25)
	NormalWhereQue -> str dollar object IS NOT BETWEEN lBracket int comma int rBracket   (26)
	UpdateQue -> object TO Literal                     (27)
	UpdateQue -> str dollar object TO Literal          (28)
	PrintQue -> str                                    (29)
	PrintQue -> str comma PrintQue semiColon           (30)
	Literal -> int                                     (31)
	Literal -> paren str paren                         (32)
	Literal -> true                                    (33)
	Literal -> false                                   (34)
	Triplets -> subject                                (35)
	Triplets -> predicate                              (36)
	Triplets -> object                                 (37)
	StringExp -> paren str paren                       (38)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	SELECT         { TokenSelect }
	WHERE          { TokenWhere }
	PRINT          { TokenPrint }
	IS             { TokenIs }
	AS             { TokenAs }
	AND            { TokenAnd }
	OR             { TokenOr }
	UPDATE         { TokenUpdate }
	BETWEEN        { TokenBetween }
	NOT            { TokenNot }
	TO             { TokenTo }
	subject        { TokenSubject }
	predicate      { TokenPredicate }
	object         { TokenObject }
	semiColon      { TokenSemiColon }
	comma          { TokenComma }
	dollar         { TokenDollar }
	paren          { TokenParen }
	lBracket       { TokenLBracket }
	rBracket       { TokenRBracket }
	true           { TokenTrue }
	false          { TokenFalse }
	int            { TokenInt $$ }
	str            { TokenString $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseQuery rule  0
	QueList         rules 1, 2
	Que             rules 3, 4, 5, 6
	SelectQue       rules 7, 8
	ResourceQue     rules 9, 10
	AliasQue        rules 11, 12
	GeneralWhereQue rule  13
	WhereQue        rules 14, 15, 16
	NormalWhereQue  rules 17, 18, 19, 20, 21, 22, 23, 24, 25, 26
	UpdateQue       rules 27, 28
	PrintQue        rules 29, 30
	Literal         rules 31, 32, 33, 34
	Triplets        rules 35, 36, 37
	StringExp       rule  38

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseQuery -> . QueList                      (rule 0)

	SELECT         shift, and enter state 3
	WHERE          shift, and enter state 4
	PRINT          shift, and enter state 5
	UPDATE         shift, and enter state 6

	QueList        goto state 7
	Que            goto state 8

State 1

	QueList -> . Que                                    (rule 1)

	SELECT         shift, and enter state 3
	WHERE          shift, and enter state 4
	PRINT          shift, and enter state 5
	UPDATE         shift, and enter state 6

	Que            goto state 2

State 2

	QueList -> Que .                                    (rule 1)



State 3

	Que -> SELECT . SelectQue                           (rule 3)

	str            shift, and enter state 25

	SelectQue      goto state 22
	ResourceQue    goto state 23
	AliasQue       goto state 24

State 4

	Que -> WHERE . GeneralWhereQue                      (rule 4)

	subject        shift, and enter state 18
	predicate      shift, and enter state 19
	object         shift, and enter state 20
	str            shift, and enter state 21

	GeneralWhereQuegoto state 15
	WhereQue       goto state 16
	NormalWhereQue goto state 17

State 5

	Que -> PRINT . PrintQue                             (rule 6)

	str            shift, and enter state 14

	PrintQue       goto state 13

State 6

	Que -> UPDATE . UpdateQue                           (rule 5)

	object         shift, and enter state 11
	str            shift, and enter state 12

	UpdateQue      goto state 10

State 7

	%start_parseQuery -> QueList .                      (rule 0)

	%eof           accept


State 8

	QueList -> Que .                                    (rule 1)
	QueList -> Que . QueList                            (rule 2)

	SELECT         shift, and enter state 3
	WHERE          shift, and enter state 4
	PRINT          shift, and enter state 5
	UPDATE         shift, and enter state 6
	%eof           reduce using rule 1

	QueList        goto state 9
	Que            goto state 8

State 9

	QueList -> Que QueList .                            (rule 2)

	%eof           reduce using rule 2


State 10

	Que -> UPDATE UpdateQue .                           (rule 5)

	SELECT         reduce using rule 5
	WHERE          reduce using rule 5
	PRINT          reduce using rule 5
	UPDATE         reduce using rule 5
	%eof           reduce using rule 5


State 11

	UpdateQue -> object . TO Literal                    (rule 27)

	TO             shift, and enter state 37


State 12

	UpdateQue -> str . dollar object TO Literal         (rule 28)

	dollar         shift, and enter state 36


State 13

	Que -> PRINT PrintQue .                             (rule 6)

	SELECT         reduce using rule 6
	WHERE          reduce using rule 6
	PRINT          reduce using rule 6
	UPDATE         reduce using rule 6
	%eof           reduce using rule 6


State 14

	PrintQue -> str .                                   (rule 29)
	PrintQue -> str . comma PrintQue semiColon          (rule 30)

	SELECT         reduce using rule 29
	WHERE          reduce using rule 29
	PRINT          reduce using rule 29
	UPDATE         reduce using rule 29
	semiColon      reduce using rule 29
	comma          shift, and enter state 35
	%eof           reduce using rule 29


State 15

	Que -> WHERE GeneralWhereQue .                      (rule 4)

	SELECT         reduce using rule 4
	WHERE          reduce using rule 4
	PRINT          reduce using rule 4
	UPDATE         reduce using rule 4
	%eof           reduce using rule 4


State 16

	GeneralWhereQue -> WhereQue . AS str                (rule 13)
	WhereQue -> WhereQue . OR WhereQue                  (rule 15)
	WhereQue -> WhereQue . AND WhereQue                 (rule 16)

	AS             shift, and enter state 32
	AND            shift, and enter state 33
	OR             shift, and enter state 34


State 17

	WhereQue -> NormalWhereQue .                        (rule 14)

	AS             reduce using rule 14
	AND            reduce using rule 14
	OR             reduce using rule 14


State 18

	NormalWhereQue -> subject . IS StringExp            (rule 17)

	IS             shift, and enter state 31


State 19

	NormalWhereQue -> predicate . IS StringExp          (rule 18)

	IS             shift, and enter state 30


State 20

	NormalWhereQue -> object . IS Literal               (rule 19)
	NormalWhereQue -> object . IS BETWEEN lBracket int comma int rBracket    (rule 20)
	NormalWhereQue -> object . IS NOT BETWEEN lBracket int comma int rBracket    (rule 21)

	IS             shift, and enter state 29


State 21

	NormalWhereQue -> str . dollar object IS Literal    (rule 22)
	NormalWhereQue -> str . dollar Triplets IS StringExp    (rule 23)
	NormalWhereQue -> str . dollar Triplets IS str dollar Triplets    (rule 24)
	NormalWhereQue -> str . dollar object IS BETWEEN lBracket int comma int rBracket    (rule 25)
	NormalWhereQue -> str . dollar object IS NOT BETWEEN lBracket int comma int rBracket    (rule 26)

	dollar         shift, and enter state 28


State 22

	Que -> SELECT SelectQue .                           (rule 3)

	SELECT         reduce using rule 3
	WHERE          reduce using rule 3
	PRINT          reduce using rule 3
	UPDATE         reduce using rule 3
	%eof           reduce using rule 3


State 23

	SelectQue -> ResourceQue .                          (rule 7)

	SELECT         reduce using rule 7
	WHERE          reduce using rule 7
	PRINT          reduce using rule 7
	UPDATE         reduce using rule 7
	%eof           reduce using rule 7


State 24

	SelectQue -> AliasQue .                             (rule 8)

	SELECT         reduce using rule 8
	WHERE          reduce using rule 8
	PRINT          reduce using rule 8
	UPDATE         reduce using rule 8
	%eof           reduce using rule 8


State 25

	ResourceQue -> str .                                (rule 9)
	ResourceQue -> str . comma ResourceQue              (rule 10)
	AliasQue -> str . AS str                            (rule 11)
	AliasQue -> str . AS str comma AliasQue             (rule 12)

	SELECT         reduce using rule 9
	WHERE          reduce using rule 9
	PRINT          reduce using rule 9
	AS             shift, and enter state 26
	UPDATE         reduce using rule 9
	comma          shift, and enter state 27
	%eof           reduce using rule 9


State 26

	AliasQue -> str AS . str                            (rule 11)
	AliasQue -> str AS . str comma AliasQue             (rule 12)

	str            shift, and enter state 60


State 27

	ResourceQue -> str comma . ResourceQue              (rule 10)

	str            shift, and enter state 59

	ResourceQue    goto state 58

State 28

	NormalWhereQue -> str dollar . object IS Literal    (rule 22)
	NormalWhereQue -> str dollar . Triplets IS StringExp    (rule 23)
	NormalWhereQue -> str dollar . Triplets IS str dollar Triplets    (rule 24)
	NormalWhereQue -> str dollar . object IS BETWEEN lBracket int comma int rBracket    (rule 25)
	NormalWhereQue -> str dollar . object IS NOT BETWEEN lBracket int comma int rBracket    (rule 26)

	subject        shift, and enter state 55
	predicate      shift, and enter state 56
	object         shift, and enter state 57

	Triplets       goto state 54

State 29

	NormalWhereQue -> object IS . Literal               (rule 19)
	NormalWhereQue -> object IS . BETWEEN lBracket int comma int rBracket    (rule 20)
	NormalWhereQue -> object IS . NOT BETWEEN lBracket int comma int rBracket    (rule 21)

	BETWEEN        shift, and enter state 52
	NOT            shift, and enter state 53
	paren          shift, and enter state 39
	true           shift, and enter state 40
	false          shift, and enter state 41
	int            shift, and enter state 42

	Literal        goto state 51

State 30

	NormalWhereQue -> predicate IS . StringExp          (rule 18)

	paren          shift, and enter state 49

	StringExp      goto state 50

State 31

	NormalWhereQue -> subject IS . StringExp            (rule 17)

	paren          shift, and enter state 49

	StringExp      goto state 48

State 32

	GeneralWhereQue -> WhereQue AS . str                (rule 13)

	str            shift, and enter state 47


State 33

	WhereQue -> WhereQue AND . WhereQue                 (rule 16)

	subject        shift, and enter state 18
	predicate      shift, and enter state 19
	object         shift, and enter state 20
	str            shift, and enter state 21

	WhereQue       goto state 46
	NormalWhereQue goto state 17

State 34

	WhereQue -> WhereQue OR . WhereQue                  (rule 15)

	subject        shift, and enter state 18
	predicate      shift, and enter state 19
	object         shift, and enter state 20
	str            shift, and enter state 21

	WhereQue       goto state 45
	NormalWhereQue goto state 17

State 35

	PrintQue -> str comma . PrintQue semiColon          (rule 30)

	str            shift, and enter state 14

	PrintQue       goto state 44

State 36

	UpdateQue -> str dollar . object TO Literal         (rule 28)

	object         shift, and enter state 43


State 37

	UpdateQue -> object TO . Literal                    (rule 27)

	paren          shift, and enter state 39
	true           shift, and enter state 40
	false          shift, and enter state 41
	int            shift, and enter state 42

	Literal        goto state 38

State 38

	UpdateQue -> object TO Literal .                    (rule 27)

	SELECT         reduce using rule 27
	WHERE          reduce using rule 27
	PRINT          reduce using rule 27
	UPDATE         reduce using rule 27
	%eof           reduce using rule 27


State 39

	Literal -> paren . str paren                        (rule 32)

	str            shift, and enter state 69


State 40

	Literal -> true .                                   (rule 33)

	SELECT         reduce using rule 33
	WHERE          reduce using rule 33
	PRINT          reduce using rule 33
	AS             reduce using rule 33
	AND            reduce using rule 33
	OR             reduce using rule 33
	UPDATE         reduce using rule 33
	%eof           reduce using rule 33


State 41

	Literal -> false .                                  (rule 34)

	SELECT         reduce using rule 34
	WHERE          reduce using rule 34
	PRINT          reduce using rule 34
	AS             reduce using rule 34
	AND            reduce using rule 34
	OR             reduce using rule 34
	UPDATE         reduce using rule 34
	%eof           reduce using rule 34


State 42

	Literal -> int .                                    (rule 31)

	SELECT         reduce using rule 31
	WHERE          reduce using rule 31
	PRINT          reduce using rule 31
	AS             reduce using rule 31
	AND            reduce using rule 31
	OR             reduce using rule 31
	UPDATE         reduce using rule 31
	%eof           reduce using rule 31


State 43

	UpdateQue -> str dollar object . TO Literal         (rule 28)

	TO             shift, and enter state 68


State 44

	PrintQue -> str comma PrintQue . semiColon          (rule 30)

	semiColon      shift, and enter state 67


State 45

	WhereQue -> WhereQue . OR WhereQue                  (rule 15)
	WhereQue -> WhereQue OR WhereQue .                  (rule 15)
	WhereQue -> WhereQue . AND WhereQue                 (rule 16)

	AS             reduce using rule 15
	AND            reduce using rule 15
	OR             reduce using rule 15


State 46

	WhereQue -> WhereQue . OR WhereQue                  (rule 15)
	WhereQue -> WhereQue . AND WhereQue                 (rule 16)
	WhereQue -> WhereQue AND WhereQue .                 (rule 16)

	AS             reduce using rule 16
	AND            reduce using rule 16
	OR             reduce using rule 16


State 47

	GeneralWhereQue -> WhereQue AS str .                (rule 13)

	SELECT         reduce using rule 13
	WHERE          reduce using rule 13
	PRINT          reduce using rule 13
	UPDATE         reduce using rule 13
	%eof           reduce using rule 13


State 48

	NormalWhereQue -> subject IS StringExp .            (rule 17)

	AS             reduce using rule 17
	AND            reduce using rule 17
	OR             reduce using rule 17


State 49

	StringExp -> paren . str paren                      (rule 38)

	str            shift, and enter state 66


State 50

	NormalWhereQue -> predicate IS StringExp .          (rule 18)

	AS             reduce using rule 18
	AND            reduce using rule 18
	OR             reduce using rule 18


State 51

	NormalWhereQue -> object IS Literal .               (rule 19)

	AS             reduce using rule 19
	AND            reduce using rule 19
	OR             reduce using rule 19


State 52

	NormalWhereQue -> object IS BETWEEN . lBracket int comma int rBracket    (rule 20)

	lBracket       shift, and enter state 65


State 53

	NormalWhereQue -> object IS NOT . BETWEEN lBracket int comma int rBracket    (rule 21)

	BETWEEN        shift, and enter state 64


State 54

	NormalWhereQue -> str dollar Triplets . IS StringExp    (rule 23)
	NormalWhereQue -> str dollar Triplets . IS str dollar Triplets    (rule 24)

	IS             shift, and enter state 63


State 55

	Triplets -> subject .                               (rule 35)

	IS             reduce using rule 35
	AS             reduce using rule 35
	AND            reduce using rule 35
	OR             reduce using rule 35


State 56

	Triplets -> predicate .                             (rule 36)

	IS             reduce using rule 36
	AS             reduce using rule 36
	AND            reduce using rule 36
	OR             reduce using rule 36


State 57

	NormalWhereQue -> str dollar object . IS Literal    (rule 22)
	NormalWhereQue -> str dollar object . IS BETWEEN lBracket int comma int rBracket    (rule 25)
	NormalWhereQue -> str dollar object . IS NOT BETWEEN lBracket int comma int rBracket    (rule 26)
	Triplets -> object .                                (rule 37)

	IS             shift, and enter state 62
			(reduce using rule 37)



State 58

	ResourceQue -> str comma ResourceQue .              (rule 10)

	SELECT         reduce using rule 10
	WHERE          reduce using rule 10
	PRINT          reduce using rule 10
	UPDATE         reduce using rule 10
	%eof           reduce using rule 10


State 59

	ResourceQue -> str .                                (rule 9)
	ResourceQue -> str . comma ResourceQue              (rule 10)

	SELECT         reduce using rule 9
	WHERE          reduce using rule 9
	PRINT          reduce using rule 9
	UPDATE         reduce using rule 9
	comma          shift, and enter state 27
	%eof           reduce using rule 9


State 60

	AliasQue -> str AS str .                            (rule 11)
	AliasQue -> str AS str . comma AliasQue             (rule 12)

	SELECT         reduce using rule 11
	WHERE          reduce using rule 11
	PRINT          reduce using rule 11
	UPDATE         reduce using rule 11
	comma          shift, and enter state 61
	%eof           reduce using rule 11


State 61

	AliasQue -> str AS str comma . AliasQue             (rule 12)

	str            shift, and enter state 81

	AliasQue       goto state 80

State 62

	NormalWhereQue -> str dollar object IS . Literal    (rule 22)
	NormalWhereQue -> str dollar object IS . BETWEEN lBracket int comma int rBracket    (rule 25)
	NormalWhereQue -> str dollar object IS . NOT BETWEEN lBracket int comma int rBracket    (rule 26)

	BETWEEN        shift, and enter state 78
	NOT            shift, and enter state 79
	paren          shift, and enter state 39
	true           shift, and enter state 40
	false          shift, and enter state 41
	int            shift, and enter state 42

	Literal        goto state 77

State 63

	NormalWhereQue -> str dollar Triplets IS . StringExp    (rule 23)
	NormalWhereQue -> str dollar Triplets IS . str dollar Triplets    (rule 24)

	paren          shift, and enter state 49
	str            shift, and enter state 76

	StringExp      goto state 75

State 64

	NormalWhereQue -> object IS NOT BETWEEN . lBracket int comma int rBracket    (rule 21)

	lBracket       shift, and enter state 74


State 65

	NormalWhereQue -> object IS BETWEEN lBracket . int comma int rBracket    (rule 20)

	int            shift, and enter state 73


State 66

	StringExp -> paren str . paren                      (rule 38)

	paren          shift, and enter state 72


State 67

	PrintQue -> str comma PrintQue semiColon .          (rule 30)

	SELECT         reduce using rule 30
	WHERE          reduce using rule 30
	PRINT          reduce using rule 30
	UPDATE         reduce using rule 30
	semiColon      reduce using rule 30
	%eof           reduce using rule 30


State 68

	UpdateQue -> str dollar object TO . Literal         (rule 28)

	paren          shift, and enter state 39
	true           shift, and enter state 40
	false          shift, and enter state 41
	int            shift, and enter state 42

	Literal        goto state 71

State 69

	Literal -> paren str . paren                        (rule 32)

	paren          shift, and enter state 70


State 70

	Literal -> paren str paren .                        (rule 32)

	SELECT         reduce using rule 32
	WHERE          reduce using rule 32
	PRINT          reduce using rule 32
	AS             reduce using rule 32
	AND            reduce using rule 32
	OR             reduce using rule 32
	UPDATE         reduce using rule 32
	%eof           reduce using rule 32


State 71

	UpdateQue -> str dollar object TO Literal .         (rule 28)

	SELECT         reduce using rule 28
	WHERE          reduce using rule 28
	PRINT          reduce using rule 28
	UPDATE         reduce using rule 28
	%eof           reduce using rule 28


State 72

	StringExp -> paren str paren .                      (rule 38)

	AS             reduce using rule 38
	AND            reduce using rule 38
	OR             reduce using rule 38


State 73

	NormalWhereQue -> object IS BETWEEN lBracket int . comma int rBracket    (rule 20)

	comma          shift, and enter state 86


State 74

	NormalWhereQue -> object IS NOT BETWEEN lBracket . int comma int rBracket    (rule 21)

	int            shift, and enter state 85


State 75

	NormalWhereQue -> str dollar Triplets IS StringExp .    (rule 23)

	AS             reduce using rule 23
	AND            reduce using rule 23
	OR             reduce using rule 23


State 76

	NormalWhereQue -> str dollar Triplets IS str . dollar Triplets    (rule 24)

	dollar         shift, and enter state 84


State 77

	NormalWhereQue -> str dollar object IS Literal .    (rule 22)

	AS             reduce using rule 22
	AND            reduce using rule 22
	OR             reduce using rule 22


State 78

	NormalWhereQue -> str dollar object IS BETWEEN . lBracket int comma int rBracket    (rule 25)

	lBracket       shift, and enter state 83


State 79

	NormalWhereQue -> str dollar object IS NOT . BETWEEN lBracket int comma int rBracket    (rule 26)

	BETWEEN        shift, and enter state 82


State 80

	AliasQue -> str AS str comma AliasQue .             (rule 12)

	SELECT         reduce using rule 12
	WHERE          reduce using rule 12
	PRINT          reduce using rule 12
	UPDATE         reduce using rule 12
	%eof           reduce using rule 12


State 81

	AliasQue -> str . AS str                            (rule 11)
	AliasQue -> str . AS str comma AliasQue             (rule 12)

	AS             shift, and enter state 26


State 82

	NormalWhereQue -> str dollar object IS NOT BETWEEN . lBracket int comma int rBracket    (rule 26)

	lBracket       shift, and enter state 92


State 83

	NormalWhereQue -> str dollar object IS BETWEEN lBracket . int comma int rBracket    (rule 25)

	int            shift, and enter state 91


State 84

	NormalWhereQue -> str dollar Triplets IS str dollar . Triplets    (rule 24)

	subject        shift, and enter state 55
	predicate      shift, and enter state 56
	object         shift, and enter state 90

	Triplets       goto state 89

State 85

	NormalWhereQue -> object IS NOT BETWEEN lBracket int . comma int rBracket    (rule 21)

	comma          shift, and enter state 88


State 86

	NormalWhereQue -> object IS BETWEEN lBracket int comma . int rBracket    (rule 20)

	int            shift, and enter state 87


State 87

	NormalWhereQue -> object IS BETWEEN lBracket int comma int . rBracket    (rule 20)

	rBracket       shift, and enter state 96


State 88

	NormalWhereQue -> object IS NOT BETWEEN lBracket int comma . int rBracket    (rule 21)

	int            shift, and enter state 95


State 89

	NormalWhereQue -> str dollar Triplets IS str dollar Triplets .    (rule 24)

	AS             reduce using rule 24
	AND            reduce using rule 24
	OR             reduce using rule 24


State 90

	Triplets -> object .                                (rule 37)

	AS             reduce using rule 37
	AND            reduce using rule 37
	OR             reduce using rule 37


State 91

	NormalWhereQue -> str dollar object IS BETWEEN lBracket int . comma int rBracket    (rule 25)

	comma          shift, and enter state 94


State 92

	NormalWhereQue -> str dollar object IS NOT BETWEEN lBracket . int comma int rBracket    (rule 26)

	int            shift, and enter state 93


State 93

	NormalWhereQue -> str dollar object IS NOT BETWEEN lBracket int . comma int rBracket    (rule 26)

	comma          shift, and enter state 99


State 94

	NormalWhereQue -> str dollar object IS BETWEEN lBracket int comma . int rBracket    (rule 25)

	int            shift, and enter state 98


State 95

	NormalWhereQue -> object IS NOT BETWEEN lBracket int comma int . rBracket    (rule 21)

	rBracket       shift, and enter state 97


State 96

	NormalWhereQue -> object IS BETWEEN lBracket int comma int rBracket .    (rule 20)

	AS             reduce using rule 20
	AND            reduce using rule 20
	OR             reduce using rule 20


State 97

	NormalWhereQue -> object IS NOT BETWEEN lBracket int comma int rBracket .    (rule 21)

	AS             reduce using rule 21
	AND            reduce using rule 21
	OR             reduce using rule 21


State 98

	NormalWhereQue -> str dollar object IS BETWEEN lBracket int comma int . rBracket    (rule 25)

	rBracket       shift, and enter state 101


State 99

	NormalWhereQue -> str dollar object IS NOT BETWEEN lBracket int comma . int rBracket    (rule 26)

	int            shift, and enter state 100


State 100

	NormalWhereQue -> str dollar object IS NOT BETWEEN lBracket int comma int . rBracket    (rule 26)

	rBracket       shift, and enter state 102


State 101

	NormalWhereQue -> str dollar object IS BETWEEN lBracket int comma int rBracket .    (rule 25)

	AS             reduce using rule 25
	AND            reduce using rule 25
	OR             reduce using rule 25


State 102

	NormalWhereQue -> str dollar object IS NOT BETWEEN lBracket int comma int rBracket .    (rule 26)

	AS             reduce using rule 26
	AND            reduce using rule 26
	OR             reduce using rule 26


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 39
Number of terminals: 24
Number of non-terminals: 14
Number of states: 103
